--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,9 @@
-<html lang="en"><head><style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-</style>
-
-
-
-  
+<html lang="en">
+  <head>
+ 
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+    </style>
     <script src="p5.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -51,4 +50,5 @@
     <script src="sketch.js"></script>
   
 
-</body></html>
+  </body>
+</html>
